--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark ">
 
-  <a class="navbar-brand" routerLink="/createList">Meeting Scheduler</a>
+  <h4 class="navbar-brand">Meeting Scheduler</h4>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
       </div>
 
 
-        <div *ngIf="adminCheck">
+        <div *ngIf="adminCheck && showHead">
             <li class="nav-item">
                 <a class="nav-link push-right" [routerLink]="['/all-users']">  View all users</a>
             </li>
